--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Transcript Labelling</title>
+    <title>Antelope: Transcript Labelling</title>
     {% load static %}
     {% csrf_token %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
